create loading animation

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/sweetalert2.css">
 </head>
 <body>
+
+    <div class="overlay"></div>
+    <div class="loading-spinner"></div>
     
     <section class="home">
         <div class="hero">
