--- a/index.html
+++ b/index.html
@@ -40,6 +40,25 @@
         </div>
     </section>
 
+    <nav>
+        <div class="navbar">
+            <ul>
+                <li>
+                    <a href="">Home</a>
+                </li>
+                <li>
+                    <a href="">About</a>
+                </li>
+                <li>
+                    <a href="">Skills</a>
+                </li>
+                <li>
+                    <a href="">Portfolio</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <section>
         <h2>Skills</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis aspernatur laboriosam, officiis eos necessitatibus voluptatibus. Suscipit facere modi cupiditate earum totam atque. Repellat sequi fugit esse exercitationem soluta quidem alias voluptates? Delectus deserunt magni atque maxime consectetur sint sapiente deleniti a quaerat molestias ex quasi aliquam exercitationem, rem inventore qui.</p>
@@ -52,7 +71,7 @@
 
     <section>
         <h2>Portfolio</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga rerum illum sequi tempore laborum tenetur vel ullam quisquam dignissimos facilis. Dicta nam sapiente minima maxime hic, aperiam, aut explicabo rem quis quod nemo. Quaerat consequuntur reprehenderit esse eaque tempore maxime in tempora, facere autem. Ullam vitae commodi voluptates quis. Excepturi.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga rerum illum sequi tempore laborum tenetur vel ullam quisquam dignissimos facilis. Dicta nam sapiente minima maxime hic, aperiam, aut explicabo rem quis quod nemo. Quaerat consequuntur reprehenderit esse eaque tempore maxime in tempora, facere autem. Ullam vitae commodi voluptates quis. Excepturi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita accusantium laboriosam nesciunt corporis temporibus eveniet, culpa, ducimus veniam excepturi, omnis harum in. Architecto repellendus harum quod impedit asperiores! Nulla commodi, fuga ipsam labore laboriosam perspiciatis et veritatis inventore eaque, nihil maiores qui dignissimos nesciunt facilis officiis excepturi quae natus quisquam ipsa reprehenderit hic quia error. Earum facere eos, doloremque, aspernatur nulla consectetur consequatur voluptatibus labore tenetur facilis ad non eveniet accusamus numquam ducimus dolorem alias autem praesentium itaque odit obcaecati! Quisquam maiores perspiciatis culpa explicabo temporibus aut eligendi sit, veniam excepturi officiis et, fuga tenetur, nam vero ad? Enim, libero! Accusamus eligendi expedita saepe nesciunt perspiciatis quae harum voluptatum atque quam, tempora explicabo animi excepturi odit non maxime laboriosam in perferendis aliquam quos consectetur iure exercitationem! Perferendis et tenetur iusto ipsa magnam excepturi cumque laborum quam, a unde, explicabo similique eius culpa architecto sequi neque quos porro non pariatur molestiae fuga tempore molestias dolorum. Deleniti totam natus eligendi sed quas similique odit, ducimus accusantium iste voluptatem consequuntur porro maiores excepturi alias libero dolore fuga iure voluptatum neque? Deserunt iste nisi sunt est, amet alias, nihil nulla fugiat molestias dicta eveniet facilis doloremque corporis inventore quidem hic rem praesentium modi similique atque porro ratione architecto magni! Neque, unde earum voluptatibus perspiciatis quaerat cumque recusandae rerum, officia similique est enim. Eveniet voluptatum dolorem libero reiciendis, maxime id porro, praesentium, adipisci esse quasi nobis voluptatibus beatae. Assumenda, eius, hic mollitia saepe non itaque nostrum corporis praesentium numquam sint animi atque! Quis inventore quam recusandae possimus beatae quod quibusdam dicta, laboriosam fuga deleniti quaerat est qui rerum laborum commodi in magni excepturi animi et. Iste officia a nobis odio, maiores reiciendis facere perspiciatis sequi dolorum magnam iure? Porro hic error fuga vel corrupti ea, eos modi aut quisquam. Possimus suscipit nostrum in dolor ullam tenetur magni necessitatibus itaque repellat velit aliquam vero enim exercitationem optio, temporibus id provident reprehenderit. Modi optio, eligendi tenetur suscipit soluta dolores dicta nostrum rem error deleniti impedit ut voluptatibus ducimus cum adipisci laborum, veniam quisquam minima. Quo veniam hic, quasi, inventore modi, accusamus natus cum aliquam dicta provident sunt? Quo quasi ad eveniet tenetur rem explicabo officiis commodi quibusdam! Aut deleniti a, illo quas rerum, suscipit numquam laudantium doloribus libero porro quaerat? Ratione omnis est tenetur illum dolores commodi optio atque at culpa, neque et, libero deleniti asperiores. Repudiandae excepturi velit laudantium impedit optio unde officiis tempore accusantium repellendus nesciunt, reiciendis, maxime qui? Doloribus nisi quasi suscipit a, laudantium deserunt. At nam cumque recusandae minus beatae ut labore iste eius explicabo! Recusandae quis modi, aliquid fuga distinctio ipsa inventore autem! Cumque eos expedita fugiat aliquid laudantium cupiditate porro, voluptates nobis explicabo quod distinctio a accusamus accusantium ex. Illo veritatis officia, aperiam iusto ab explicabo excepturi minus ex amet nemo ut sapiente atque! Maiores quo corporis veritatis quisquam reprehenderit suscipit ut, placeat assumenda fugit et voluptatibus facere repellat corrupti labore nesciunt ducimus consequuntur doloremque ipsa expedita. Repellat incidunt enim tenetur explicabo! Earum quasi fuga ab rerum, iure eligendi nihil possimus.</p>
     </section>
 
     <script src="js/sweetalert2.all.js"></script>
