--- a/index.html
+++ b/index.html
@@ -12,8 +12,27 @@
 <body>
 
     <div class="overlay"></div>
-    <div class="loading-spinner"></div>
+    <!-- <div class="loading-spinner"></div> -->
     
+    <div class="hamburger">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+        </svg>
+    </div>
+
+    <nav>
+        <div class="sidebar">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#portfolio">Porfolio</a></li>
+            </ul>
+
+            <a href="#" class="hire-me">Hire Me</a>
+        </div>
+    </nav>
+
     <section class="home">
         <div class="hero">
             <img src="img/me2.jpg" alt="" class="img-author">
@@ -40,32 +59,13 @@
         </div>
     </section>
 
-    <nav>
-        <div class="navbar">
-            <ul>
-                <li>
-                    <a href="">Home</a>
-                </li>
-                <li>
-                    <a href="">About</a>
-                </li>
-                <li>
-                    <a href="">Skills</a>
-                </li>
-                <li>
-                    <a href="">Portfolio</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
     <section>
-        <h2>Skills</h2>
+        <h2>About</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis aspernatur laboriosam, officiis eos necessitatibus voluptatibus. Suscipit facere modi cupiditate earum totam atque. Repellat sequi fugit esse exercitationem soluta quidem alias voluptates? Delectus deserunt magni atque maxime consectetur sint sapiente deleniti a quaerat molestias ex quasi aliquam exercitationem, rem inventore qui.</p>
     </section>
 
     <section>
-        <h2>About</h2>
+        <h2>Skills</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam rem omnis animi debitis dolore. Ullam, sequi. Deserunt velit quibusdam nobis eius, illum quos distinctio fuga obcaecati nesciunt? Tempora nobis fugit ipsam praesentium nisi ea optio. Voluptates tempora eaque voluptas quibusdam amet similique. Dicta voluptates earum laboriosam inventore rerum repellendus impedit.</p>
     </section>
 
