--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section id="home">
         <div class="hero">
-            <img src="img/dummy2.jpg" alt="" class="img-author wow fadeInUpBig" data-wow-duration="0.8s">
+            <img src="/img/me.jpg" alt="" class="img-author wow fadeInUpBig" data-wow-duration="0.8s">
 
             <h2 id="name" class="wow fadeInUpBig" data-wow-duration="1.2s">Gufronnaka Arif Wildan</h2>
             <p id="role" class="wow fadeInUpBig" data-wow-duration="1.4s"></p>
@@ -49,10 +49,12 @@
                 <a href="mailto: gufronnakaaw@gmail.com" class="email wow fadeInUpBig" data-wow-duration="1.6s">
                     <i class="fa fa-envelope"></i>
                 </a>
-                <a href="https://github.com/gufronnakaaw" target="_blank" class="github wow fadeInUpBig" data-wow-duration="2s">
+                <a href="https://github.com/gufronnakaaw" target="_blank" class="github wow fadeInUpBig"
+                    data-wow-duration="2s">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="https://t.me/whoslemontea" target="_blank" class="telegram wow fadeInUpBig" data-wow-duration="2.4s">
+                <a href="https://t.me/whoslemontea" target="_blank" class="telegram wow fadeInUpBig"
+                    data-wow-duration="2.4s">
                     <i class="fab fa-telegram"></i>
                 </a>
             </div>
@@ -64,9 +66,9 @@
     <section id="about">
         <h2 data-aos="fade-up">About Me</h2>
         <div class="container" data-aos="fade-up" data-aos-duration="1200">
-            <p class="mt-3">Hi there, I'm Dannn.</p>
-            <!-- <p>A freelance <b>Junior Backend Developer</b> based in Depok, Indonesia.</p> -->
-            <p>I'm a <b>Back-end Web Developer</b> who loves building dinamic websites and loves helping people learn how
+            <p class="mt-3">Hi there, I'm dann.</p>
+            <p>I'm a <b>Back-end Web Developer</b> who loves building dinamic websites and loves helping people learn
+                how
                 to code. Based in Jakarta Selatan, Indonesia.</p>
         </div>
     </section>
@@ -80,7 +82,8 @@
                     <p>These are some tools and softwares that i'm good at.</p>
                 </div>
 
-                <div class="col-lg-6 d-flex flex-column justify-content-around" data-aos="fade-up" data-aos-duration="1400">
+                <div class="col-lg-6 d-flex flex-column justify-content-around" data-aos="fade-up"
+                    data-aos-duration="1400">
                     <div class="row d-flex justify-content-around">
                         <img src="/img/html.svg" alt="html" title="html">
 
@@ -130,10 +133,10 @@
 
                         <div class="card-container">
                             <h4><b>WeFo</b></h4>
-                            <p>WeFo is a weather app. You can search current weather by city.</p>
+                            <p>WeFo is a weather app. You can search current the weather by city.</p>
 
                             <br>
-                            <a href="https://gufronnakaaw.github.io/wefo" target="_blank">
+                            <a href="https://wefo.vercel.app" target="_blank">
                                 See
                                 <i class="fa fa-arrow-right" aria-hidden="true"></i>
                             </a>
@@ -146,10 +149,11 @@
 
                         <div class="card-container">
                             <h4>Muslimify API</h4>
-                            <!-- <p>Muslimify is a simple Qur'an API to retrieve an ayah, surah, daily doa, random quotes, etc. We serve in Bahasa Indonesia.</p>  -->
-                            <p>Muslimify API is one of endpoint with indonesia language, provider of the holy verses of
+                            <p>Muslimify is a simple Qur'an API to retrieve an ayah, surah, daily doa, random quotes,
+                                etc. We serve in Bahasa Indonesia.</p>
+                            <!-- <p>Muslimify API is one of endpoint with indonesian language, provider of the holy verses of
                                 Al-Quran, a day prayer, quotes, etc. Also it can be access for free and it can be use
-                                everytime.</p>
+                                everytime.</p> -->
 
                             <br>
                             <a href="https://apimuslimify.herokuapp.com/api/v1" target="_blank">
@@ -161,10 +165,10 @@
                 </div>
                 <div class="col-md-4 mb-5">
                     <div class="card">
-                        <img src="/img/unknown.svg" alt="Avatar">
+                        <img src="/img/bloghut.jpg" alt="Avatar">
 
                         <div class="card-container">
-                            <h4><b>Coming Soon</b></h4>
+                            <h4><b>Bloghut</b></h4>
                             <p>Coming Soon</p>
                         </div>
                     </div>
