--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
             <div>
                 <a href="https://github.com/gufronnakaaw" target="_blank">
-                    See another my personal project here
+                    See my other personal projects here
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
                 </a>
             </div>
