--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
                         <div class="card-container">
                             <h4><b>WeFo</b></h4>
-                            <p>WeFo is a weather app. You can search current the weather by city.</p>
+                            <p>WeFo is a weather app. You can search the current weather by city.</p>
 
                             <br>
                             <a href="https://wefo.vercel.app" target="_blank">
