change link for personal project

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <h4><b>WeFo</b></h4>
                             <p>WeFo is a weather app. You can search the current weather by city.</p>
                             <br>
-                            <a href="https://wefo.vercel.app" target="_blank">
+                            <a href="https://wefo.wildanlab.tech" target="_blank">
                                 See
                                 <i class="fa fa-arrow-right" aria-hidden="true"></i>
                             </a>
@@ -176,7 +176,7 @@
                         <div class="project-info">
                             <h4><b>Permoment</b></h4>
                             <p>Coming Soon</p>
-                            <!-- <a href="" target="_blank">
+                            <!-- <a href="https://permoment.wildanlab.tech" target="_blank">
                                 See
                                 <i class="fa fa-arrow-right" aria-hidden="true"></i>
                             </a> -->
