add copyright icon and change expressjs svg to ts svg

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                         <img data-aos="fade-right" src="/img/nodejs.svg" alt="nodejs" title="nodejs">
 
-                        <img data-aos="fade-right" src="/img/express.svg" alt="expressjs" title="expressjs">
+                        <img data-aos="fade-right" src="/img/ts.svg" alt="typescript" title="typescript">
                     </div>
 
                     <div class="row d-flex justify-content-around">
@@ -209,7 +209,7 @@
             Contact Me
         </button>
 
-        <p>Copyright
+        <p>Copyright &copy;
             <script>const date = new Date(); document.write(date.getFullYear())</script>
             <span style="color: #f39c12;">
                 <script>document.write(domain)</script>
