add new personal project

--- a/index.html
+++ b/index.html
@@ -173,6 +173,27 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-md-4 mb-5">
+                    <div class="card">
+                        <a href="/img/short.jpg" data-fslightbox="short-project">
+                            <img src="/img/short.jpg" alt="short-project">
+                        </a>
+
+                        <div class="project-info">
+                            <h4><b>SHORT!</b></h4>
+                            <p>SHORT! is a simple URL Shortener. Build with NEXT.JS and Supabase.</p>
+                            <br>
+                            <a href="https://short.wildandev.com" target="_blank">
+                                See
+                                <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row" data-aos="fade-up" data-wow-duration="2000">
                 <div class="col-md-4 mb-5">
                     <div class="card">
                         <a href="/img/permoment.png" data-fslightbox="permoment-project">
@@ -183,6 +204,40 @@
                             <h4><b>Permoment</b></h4>
                             <p>Coming Soon</p>
                             <!-- <a href="https://permoment.wildandev.com" target="_blank">
+                                See
+                                <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                            </a> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-5">
+                    <div class="card">
+                        <a href="/img/coming-soon.png" data-fslightbox="coming-soon-project">
+                            <img src="/img/coming-soon.png" alt="coming-soon-project">
+                        </a>
+
+                        <div class="project-info">
+                            <h4><b>Coming Soon</b></h4>
+                            <!-- <p></p> -->
+                            <br>
+                            <!-- <a href="" target="_blank">
+                                See
+                                <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                            </a> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-5">
+                    <div class="card">
+                        <a href="/img/coming-soon.png" data-fslightbox="coming-soon-project">
+                            <img src="/img/coming-soon.png" alt="coming-soon-project">
+                        </a>
+
+                        <div class="project-info">
+                            <h4><b>Coming Soon</b></h4>
+                            <!-- <p></p> -->
+                            <br>
+                            <!-- <a href="" target="_blank">
                                 See
                                 <i class="fa fa-arrow-right" aria-hidden="true"></i>
                             </a> -->
