update: new personal project

--- a/index.html
+++ b/index.html
@@ -202,11 +202,13 @@
 
                         <div class="project-info">
                             <h4><b>Permoment</b></h4>
-                            <p>Coming Soon</p>
-                            <!-- <a href="https://permoment.wildandev.com" target="_blank">
+                            <p>An app for calculate your monthly expenses. Build with React + Vite and save the
+                                data in localstorage, it means i don't collect anything (client side only).
+                            </p>
+                            <a href="https://permoment.wildandev.com" target="_blank">
                                 See
                                 <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                            </a> -->
+                            </a>
                         </div>
                     </div>
                 </div>
