--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a class="e-certificate">E-Certificate</a></li>
             </ul>
 
-            <button class="contact-button">Contact Me</button>
+            <button class="connect-button">Connect With Me</button>
         </div>
     </nav>
 
@@ -49,19 +49,6 @@
             <h2 id="name" class="wow fadeInUpBig" data-wow-duration="1.2s">Gufronnaka Arif Wildan</h2>
             <p id="role" class="wow fadeInUpBig" data-wow-duration="1.4s"></p>
 
-            <div class="social-media">
-                <a href="mailto: gufronnakaaw@gmail.com" class="email wow fadeInUpBig" data-wow-duration="1.6s">
-                    <i class="fa fa-envelope"></i>
-                </a>
-                <a href="https://github.com/gufronnakaaw" target="_blank" class="github wow fadeInUpBig"
-                    data-wow-duration="2s">
-                    <i class="fab fa-github"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/gufronnaka-arif-wildan-6384b0213/" target="_blank"
-                    class="linkedin wow fadeInUpBig" data-wow-duration="2.4s">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-            </div>
         </div>
     </section>
 
@@ -166,7 +153,7 @@
                             <p>Muslimify is a simple Qur'an API to retrieve an ayah, surah, daily doa, random quotes,
                                 etc. We serve in Bahasa Indonesia.</p>
                             <br>
-                            <a href="https://apimuslimify.vercel.app/api/v1" target="_blank">
+                            <a href="https://github.com/gufronnakaaw/muslimify-api" target="_blank">
                                 See
                                 <i class="fa fa-arrow-right" aria-hidden="true"></i>
                             </a>
@@ -262,8 +249,8 @@
 
     <section id="footer">
 
-        <button class="contact-button">
-            Contact Me
+        <button class="connect-button">
+            Connect With Me
         </button>
 
         <p>Copyright &copy;
