update: new personal project(muslimify) and switch positions

--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
 
                         <div class="project-info">
                             <h4>Muslimify API</h4>
-                            <p>Muslimify is a simple Qur'an API to retrieve an ayah, surah, daily doa, random quotes,
+                            <p>Muslimify API is a simple Qur'an API to retrieve an ayah, surah, daily doa, random
+                                quotes,
                                 etc. We serve in Bahasa Indonesia.</p>
                             <br>
                             <a href="https://github.com/gufronnakaaw/muslimify-api" target="_blank">
@@ -163,15 +164,16 @@
 
                 <div class="col-md-4 mb-5">
                     <div class="card">
-                        <a href="/img/short.jpg" data-fslightbox="short-project">
-                            <img src="/img/short.jpg" alt="short-project">
+                        <a href="/img/muslimify.png" data-fslightbox="muslimify-project">
+                            <img src="/img/muslimify.png" alt="muslimify-project">
                         </a>
 
                         <div class="project-info">
-                            <h4><b>SHORT!</b></h4>
-                            <p>SHORT! is a simple URL Shortener. Build with NEXT.JS and Supabase.</p>
+                            <h4><b>Muslimify</b></h4>
+                            <p>Web Based Quran Application. Developed in collaboration with my friend of passionate and
+                                talented in UI/UX. Build with NEXT.JS, Tailwind CSS, and Muslimify API.</p>
                             <br>
-                            <a href="https://short.wildandev.com" target="_blank">
+                            <a href="https://muslimify.vercel.app" target="_blank">
                                 See
                                 <i class="fa fa-arrow-right" aria-hidden="true"></i>
                             </a>
@@ -199,23 +201,25 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="col-md-4 mb-5">
                     <div class="card">
-                        <a href="/img/coming-soon.png" data-fslightbox="coming-soon-project">
-                            <img src="/img/coming-soon.png" alt="coming-soon-project">
+                        <a href="/img/short.jpg" data-fslightbox="short-project">
+                            <img src="/img/short.jpg" alt="short-project">
                         </a>
 
                         <div class="project-info">
-                            <h4><b>Coming Soon</b></h4>
-                            <!-- <p></p> -->
+                            <h4><b>SHORT!</b></h4>
+                            <p>SHORT! is a simple URL Shortener. Build with NEXT.JS and Supabase.</p>
                             <br>
-                            <!-- <a href="" target="_blank">
+                            <a href="https://short.wildandev.com" target="_blank">
                                 See
                                 <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                            </a> -->
+                            </a>
                         </div>
                     </div>
                 </div>
+
                 <div class="col-md-4 mb-5">
                     <div class="card">
                         <a href="/img/coming-soon.png" data-fslightbox="coming-soon-project">
