update: fix grammatically for muslimify project

--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@
 
                         <div class="project-info">
                             <h4><b>Muslimify</b></h4>
-                            <p>Web Based Quran Application. Developed in collaboration with my friend of passionate and
-                                talented in UI/UX. Build with NEXT.JS, Tailwind CSS, and Muslimify API.</p>
+                            <p>Muslimify is a Web Based Quran Application. Developed in collaboration with my talented
+                                and passionate
+                                friend in UI/UX. Build with NEXT.JS, Tailwind CSS, and Muslimify API.</p>
                             <br>
                             <a href="https://muslimify.vercel.app" target="_blank">
                                 See
