--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <section id="home">
         <div class="hero">
-            <img src="/img/me2.jpg" alt="" class="img-author wow fadeInUpBig" data-wow-duration="0.8s">
+            <img src="/img/me.jpg" alt="" class="img-author wow fadeInUpBig" data-wow-duration="0.8s">
 
             <h2 id="name" class="wow fadeInUpBig" data-wow-duration="1.2s">Gufronnaka Arif Wildan</h2>
             <p id="role" class="wow fadeInUpBig" data-wow-duration="1.4s"></p>
